sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:21: error: ';' expected but '=' found.
  (b,p) = indexToBP(index)
        ^