sort.baseball.InsertBaseball.scala.code
override def run() {
  var nbBases = getNombreBases()
  var nbPos = getNombrePositions()
}

//Nouvelles fonction

def trouveTrou():Int ={
  var b= getTrouBase()
  var p = getTrouPosition()
  return b*2 + p
}

def indexToBP(index:Int) : (Int,Int) ={
  return (index/2, index%2)
}

def couleurJoueur(index:Int) : Int={
 	var b=0
 	var p=0
  (b,p) = indexToBP(index)
  return getCouleurJoueur(b,p)
}